# app_gr

./: .gitignore  CLAUDE.md  Makefile
backend/: .env.example  .gitignore  DEPLOY.md  README.md  alembic.ini  moc_mdfe.txt  nt2.txt  pyproject.toml  ruff.toml  start.ps1
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 03a6eff064c0_warehouse_wh_movimento_caixa.py  03c0d6a48f32_warehouse_aquisicao_liquidacao_operacao_.py  11f533fcddd2_warehouse_add_uq_tenant_id_source_id_.py  1368b623728e_warehouse_wh_qitech_raw_relatorio.py  25a3ad5c782c_warehouse_titulo_snapshot_operacao_.py  2e4aa7fef995_merge_heads_drop_dre_natureza_serasa_.py  32a2d607d5c4_qitech_report_jobs_estoque_payload_text_.py  39f86beb8fd0_merge_heads_bdc_a1c4e7f2b9d3_concilia_.py  3ba008fdeb37_warehouse_wh_posicao_renda_fixa.py  40c76a6cec65_cadastros_unidade_administrativa.py  469fa975077a_qitech_bank_account_raw_canonico_saldo_.py  4d58236581fa_merge_heads_grupo_receita_paralela.py  4dfbd64002b5_credito_fix_workflow_definition_graph_.py  61bc40f7c9e2_cadastros_ua_server_default_uuid.py  64feb2501ac9_initial_schema_identity_audit_log_.py  65ff6d536bf2_warehouse_wh_rentabilidade_fundo.py  684f1f0389e0_warehouse_wh_mec_evolucao_cotas.py  6bb2625d412b_wh_pj_vinculo_wh_pj_grupo_indicador_.py  729e2b20f466_warehouse_wh_cpr_movimento.py  733528384336_warehouse_wh_movimento_aberto.py  7342979c61cf_warehouse_wh_saldo_tesouraria.py  757324f89a78_tenant_source_config_last_sync_started_.py  7afc13ded02f_workflow_add_workflow_notification_table.py  7c2dffe119a4_ai_prompt_db_managed.py  7e003b3b1e53_tenant_source_config_sync_frequency_.py  7f1a9c4e2d83_cosif_contrapartida_grupo3.py  855c33dfd7df_credito_enable_module_grant_admin_.py  871dcc83d5b3_bi_add_user_fund_favorite.py  8ec965225fbf_credito_fix_module_permission_enum_case_.py  95b297912b91_bdc_silver_enrich_relationships_grupo_.py  993215c046ad_warehouse_wh_posicao_compromissada.py  9a1ccaa15a01_ai_capability_baseline.py  a1b2c3d4e5f6_widen_serasa_pj_percentage_cols.py  a1c4e7f2b9d3_bdc_raw_consulta_e_tax_status_64.py  a1c4e7f9b2d3_bdc_processos_silver.py  a1f7c3e9d5b2_risco_deteccao_spine.py  a2a74d400f25_warehouse_wh_saldo_conta_corrente.py  a2c9f4e7b6d8_boleto_evento_titulo_id.py  a3c5d1e7b8f2_seed_qitech_custodia_endpoints.py  a3c7e1f5b9d2_infosimples_jucesp_fase1.py  (+134 more)
backend/app/: __init__.py  main.py  metadata.py  seed.py
backend/app/agentic/: __init__.py  _scope.py  analysis_cache.py
backend/app/core/: __init__.py  ai_guard.py  config.py  database.py  enums.py  json_codec.py  module_guard.py  security.py  system_health_guard.py  system_maintainer_guard.py  tenant_middleware.py
backend/app/modules/: __init__.py
backend/app/scheduler/: __init__.py  cobranca_landing.py  deteccao_scoring.py  fiscal_landing.py  ref_bacen_sync.py  scheduler.py  sync_dispatcher.py
backend/app/shared/: __init__.py  auditable.py  documento.py  endpoint_catalog.py  metric_catalog.py  silver_catalog.py
backend/app/warehouse/: __init__.py  aquisicao_recebivel.py  banco_agencia.py  bcb_agencia.py  bdc_raw_consulta.py  bitfin_dre_natureza_rule.py  bitfin_entidade.py  bitfin_raw_debenture.py  bitfin_raw_dre.py  bitfin_receita_stream.py  bitfin_tarifa_catalogo.py  boleto.py  boleto_evento.py  boleto_vigente.py  caixa_snapshot.py  (+70 more)
backend/deploy/: gr-api.service
backend/docs/: atribuicao-cota-sub-cosif.md  cota-sub-explainers-heuristicos.md  cota-sub-variacao-diaria-endpoint.md  relatorios-controladoria-catalog.md
backend/scripts/: _auto_revert_worker.py  _dump_cosif_folhas_realinvest_2026-05-13.py  _refetch_demonstrativo_day.py  _test_classify_cosif.py  _validate_cpr_natureza.py  audita_balanco_estrutural.py  backfill_aquisicao_consolidada.py  backfill_bank_account_statement.py  backfill_bcb_agencia.py  backfill_boleto_evento.py  backfill_cnab_ocorrencia.py  backfill_debenture_posicao.py  backfill_endpoint_date_state.py  backfill_fidc_estoque_report.py  backfill_liquidados_baixados.py  backfill_nfe_item_transporte.py  backfill_pj_cadastro.py  backfill_qitech_2026.py  backfill_qitech_completeness.py  backfill_qitech_mec.py  backfill_qitech_raw_id.py  backfill_qitech_rf_compromissadas.py  capture_bdc_fixtures.py  debug_apropriacao_dc.py  export_analise_consultoria_cobranca_xlsx.py  export_conferencia_consultoria_cobranca_xlsx.py  export_cpr_movimento_xlsx.py  export_mec_evolucao_cotas.py  export_pagamentos_consultoria_cobranca_xlsx.py  export_pagamentos_servico_por_empresa_xlsx.py  ingest_fidc_estoque_archive.py  oneshot_backfill_freshness.py  patch_prompt_auditor_aplicacoes_v1.py  patch_prompt_auditor_contas_a_pagar_v1.py  patch_prompt_auditor_cotas_v1.py  patch_prompt_auditor_notas_comerciais_v1.py  patch_prompt_auditor_pdd_v1.py  patch_prompt_auditor_resultado_v1.py  patch_prompt_auditor_variacao_caixa_v1.py  patch_prompt_auditor_variacao_carteira_v1.py  (+66 more)
backend/tests/: conftest.py  test_auth.py  test_docs_producao.py  test_system_health_guard.py  test_tenant_isolation.py
(+1472 files in other folders)
