[project]
name = "gr-backend"
version = "0.1.0"
description = "GR - Plataforma de inteligencia de dados para FIDCs (backend)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "A7 Credit" }]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ORM + DB
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Pydantic + config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",  # passlib compat pin
    # HTTP client
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.4.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # SQL Server (for Bitfin adapter)
    "pyodbc>=5.0.0",
    # Utilities
    "python-multipart>=0.0.17",  # form data support for FastAPI
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
