[project]
name = "gr-backend"
version = "0.1.0"
description = "GR - Plataforma de inteligencia de dados para FIDCs (backend)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "A7 Credit" }]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ORM + DB
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Pydantic + config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",  # passlib compat pin
    # JWT ES512 (QiTech) — PyJWT + cryptography (cryptography ja vem via Fernet)
    "pyjwt[crypto]>=2.9.0",
    # HTTP client
    "httpx>=0.27.0",
    # Logging: stdlib `logging` (CLAUDE.md sec 9) — structlog removido 2026-07-06 (dep morta, 0 imports)
    # Scheduling
    "apscheduler>=3.10.4",
    # SQL Server (for Bitfin adapter)
    "pyodbc>=5.0.0",
    # Anthropic SDK oficial (CLAUDE.md §2). Messages API direta com tool
    # use nativo + prompt caching. Usado pelo runtime de Specialist Agents
    # em `app/agentic/engine/runtime.py` e pelo adapter de chat em
    # `app/modules/integracoes/adapters/llm/anthropic/`.
    "anthropic>=0.71",
    # SDK oficial MCP (modelcontextprotocol/python-sdk) — AUTORIZADO Ricardo
    # 2026-07-23 (spec specs/active/copiloto-mcp.md §4.1). Cliente MCP proprio
    # do backend (Streamable HTTP + headers custom do vendor) em
    # `app/agentic/mcp/client.py`. Proibido reimplementar o protocolo na mao.
    "mcp>=1.9",
    # Object storage (landing zone multi-tenant de arquivos — S3 sa-east-1,
    # bucket por tenant). Autorizado no plano "Landing Zone Multi-tenant"
    # (2026-07-06). Import lazy em app/shared/storage/s3.py: instalacoes com
    # FILE_STORAGE_BACKEND=local nao tocam a lib.
    "aiobotocore>=2.15",
    # Utilities
    "python-multipart>=0.0.17",  # form data support for FastAPI
    "email-validator>=2.2.0",
    # Excel export (scripts/export_*.py, futuro catalogo de relatorios).
    "openpyxl>=3.1,<4",
    # Deteccao de anomalias (modulo risco) — AUTORIZADO Ricardo 2026-07-08
    # (handoff deteccao-anomalias-liquidacao). Uso RESTRITO a treino/score
    # dos modelos de deteccao (app/modules/risco/services/deteccao*); regra
    # do handoff: UMA lib de ML so — logistic regression interpretavel,
    # coeficientes persistidos em deteccao_modelo_versao (JSONB), sem pickle.
    "scikit-learn>=1.5,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    # Dataset dos evals de orquestracao (tests/evals/*.yaml — spec copiloto-mcp §14.2).
    "pyyaml>=6",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers -m 'not evals'"
markers = [
    # Evals de orquestracao (spec copiloto-mcp §14.2): custam tokens de LLM
    # e rodam ON-DEMAND: `pytest -m evals` (o -m da CLI sobrepoe o addopts).
    # Exigem EVALS_ANTHROPIC_API_KEY no ambiente (skip sem ela).
    "evals: evals de orquestracao de agente (custam tokens; on-demand)",
]
